[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Adrian Parker <ihsw.aparker.kilabuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"
Flask-SQLAlchemy = "^2.5.1"
python-json-logger = "^2.0.2"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
coverage = "^6.3.1"
coveralls = "^3.3.1"
pytest-watch = "^4.2.0"
black = "^22.1.0"
alembic = "^1.7.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
